@@ -1,3 +1,15 @@
+2007-04-08  David Hyatt  <hyatt@apple.com>
+
+        Fix mouseover/out failing layout tests.
+
+        Reviewed by aroben
+
+        * page/EventHandler.cpp:
+        (WebCore::EventHandler::handleMouseMoveEvent):
+        (WebCore::EventHandler::updateMouseEventTargetNode):
+        (WebCore::EventHandler::dispatchMouseEvent):
+        * page/EventHandler.h:
+
 2007-04-08  Oliver Hunt  <oliver@apple.com>
 
         Reviewed by Adam.
